# Automated_PCB_Layout_Using_EA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  bestPnsoutput.csv
AcBel web application/: back_data.js  exportSVG.txt  front_data.js  index.html  main.js  net.csv  output.csv  pin.csv  placement.csv  preplace pin.csv  preplace.csv  route.csv  server.py
AcBel web application/animation/animation_2/: pin_0.csv  pin_1.csv  pin_101.csv  pin_116.csv  pin_12.csv  pin_18.csv  pin_187.csv  pin_2.csv  pin_204.csv  pin_226.csv  pin_23.csv  pin_233.csv  pin_236.csv  pin_24.csv  pin_26.csv  pin_34.csv  pin_35.csv  pin_38.csv  pin_46.csv  pin_5.csv  pin_51.csv  pin_54.csv  pin_57.csv  pin_62.csv  pin_66.csv  pin_72.csv  pin_8.csv  pin_80.csv  pin_88.csv  pin_9.csv  pin_90.csv  pin_93.csv  placement_0.csv  placement_1.csv  placement_10.csv  placement_110.csv  placement_143.csv  placement_19.csv  placement_2.csv  placement_219.csv  (+24 more)
AcBel web application/animation/animation_3/: pin_108.csv  pin_11.csv  pin_117.csv  pin_118.csv  pin_12.csv  pin_120.csv  pin_123.csv  pin_127.csv  pin_130.csv  pin_135.csv  pin_147.csv  pin_15.csv  pin_156.csv  pin_16.csv  pin_163.csv  pin_166.csv  pin_18.csv  pin_180.csv  pin_186.csv  pin_2.csv  pin_20.csv  pin_21.csv  pin_225.csv  pin_231.csv  pin_24.csv  pin_26.csv  pin_27.csv  pin_28.csv  pin_3.csv  pin_31.csv  pin_32.csv  pin_33.csv  pin_37.csv  pin_4.csv  pin_43.csv  pin_47.csv  pin_50.csv  pin_55.csv  pin_58.csv  pin_6.csv  (+58 more)
AcBel web application/animation/result/: pin_0.csv  pin_10.csv  pin_102.csv  pin_122.csv  pin_126.csv  pin_129.csv  pin_13.csv  pin_134.csv  pin_138.csv  pin_142.csv  pin_15.csv  (+75 more)
AcBel web application/css/: drawTree.css  main.css  sidenav.css
AcBel web application/js/: 3D scene.js  Layout.js  drawLayout.js  drawTree.js  geometry.js  main.js  openPage.js  svg canvas.js  svg controller.js
Results/1/: pin.csv  placement.csv
Results/1653323067/: pin.csv
Results/1653366335/: pin.csv  placement.csv
Results/1653369478/: pin.csv  placement.csv
Results/2/: pin.csv  placement.csv
Results/3/: pin.csv  placement.csv
Results/4/: pin.csv  placement.csv
includes/: BinaryTree.h  Component.h  ComponentList.h  Contour.h  Data.h  DebugMode.h  Layout.h  TreeNode.h  console.h  debug.h  utility.h
includes/GA/: GA.h  GA_Parameter.h
includes/GL/: freeglut_std.h
includes/Layout/: BinaryTree.h  Component.h  ComponentList.h  Contour.h  Layout.h  NetList.h  PlotBinaryTree.h  Route.h  Route.hpp  TreeNode.h
includes/MOEAD/: MOEAD.h  MOEAD_Parameter.h
resources/: 200-1.csv  FSL020-000GP5A_edited.net  cell.cell  component.csv  component_with 3 dummy.csv  net.csv  netlist.net  preplace.csv
resources/pin position/: C502.csv  C507.csv  C512.csv  C518.csv  C520.csv  C525.csv  D503.csv  D505.csv  D506.csv  D509.csv  L501.csv  M503.csv  Q504.csv  R501.csv  R515.csv  R517.csv  R520.csv  T501.csv  ZD501.csv  ZD502.csv  ZD504.csv
src/: BinaryTree.cpp  Component.cpp  ComponentList.cpp  Contour.cpp  Data.cpp  GL.cpp  TreeNode.cpp  console.cpp  debug.cpp  main.cpp  utility.cpp
src/BinaryTree/: BinaryTree.cpp  PlotBinaryTree.cpp
src/GA/: GA.cpp  GA_Parameter.cpp  Generation.cpp
src/Layout/: Contour.cpp  Layout.cpp
src/MOEAD/: MOEAD.cpp  MOEAD_Parameter.cpp
test/: pin.csv  placement_test.csv
(+16 files in other folders)
